--- a/17-PROYECTO-Buscador/index.html
+++ b/17-PROYECTO-Buscador/index.html
@@ -99,9 +99,10 @@
         <h1>Resultados</h1>
         <div id="resultado"></div>
     </div>
-
+    
     <script src="js/db.js"></script>
     <script src="js/app.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     
 </body>
 </html>
