--- a/17-PROYECTO-Buscador/index.html
+++ b/17-PROYECTO-Buscador/index.html
@@ -101,7 +101,7 @@
     </div>
     
     <script src="js/db.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/app1.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     
 </body>
