--- a/19-PROYECTO-LocalStorage/index.html
+++ b/19-PROYECTO-LocalStorage/index.html
@@ -34,5 +34,6 @@
     </div> <!--#contenido-->
 
     <script src="js/app.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
