--- a/15-PROYECTO-Carrito/index.html
+++ b/15-PROYECTO-Carrito/index.html
@@ -34,9 +34,12 @@
                                         </thead>
                                         <tbody></tbody>
                                     </table>
-
+                                    <div id="total">
+                                        <p></p>
+                                    </div>
                                     <a href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
                             </div>
+                            
                     </li>
                 </ul>
             </div>
